<resources>
    <string name="app_name" translatable="false">test</string>
    <string name="first_name">First Name：</string>
    <string name="last_name">Last Name：</string>
    <string name="image">Image：</string>
    <string name="email">Email：</string>
    <string name="phone">Phone：</string>
    <string name="address">Address：</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_address">Enter Address</string>
</resources>
