<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/wrap"
    tools:context=".AddPhoneNumber">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/line1"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"

            android:text="back"
            android:textColor="#708090"
            android:textSize="17dp" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"

            android:text="Save"
            android:textColor="#708090"
            android:textSize="17dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/button_firstN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="37dp"
        android:text="@string/first_name"
        android:textColor="#696969"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/button_lastN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_firstN"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/last_name"
        android:textColor="#696969"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_lastN"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/image"
        android:textColor="#696969"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/button_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_image"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textColor="#696969"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/button_phoneNBer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_Email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/phone"
        android:textColor="#696969"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/button_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_phoneNBer"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/address"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_firstN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@id/button_firstN"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:maxLength="10"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_lastN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_firstN"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@id/button_lastN"
        android:hint="@string/enter_last_name"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_lastN"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/button_image"
        android:hint="@string/upload_image"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_image"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/button_Email"
        android:hint="@string/enter_email"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_phoneNBer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_Email"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/button_phoneNBer"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#696969"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_phoneNBer"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/button_address"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:maxLength="20"
        android:textColor="#696969"
        android:textSize="15dp" />


</RelativeLayout>